tests/NormalTests/paczka1/small_fuzzy/86245823.err
Error in line 1: A860 A147 19,94
Error in line 7: IT4VWYPLKsi A681 83,2
